--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "@faker-js/faker": "^8.4.1",
     "eslint": "^9.2.0",
     "globals": "^15.1.0"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
